Added basic information to webpage.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 Mauricio Cruz Loya:
   name        : "Mauricio Cruz Loya"
   uri         : "http://mcruzloya.com"
-  email       : "mcruzloya@g.ucla.edu"
+  email       : "test@test.com"
   bio         : "PhD candidate in Biomathematics at UCLA"
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
