--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Mauricio Cruz-Loya"
   avatar           : "profile.png"
-  bio              : "Mathematical biologist focusing on microbiology, systems biology and microbial ecology; PhD candidate in Biomathematics at UCLA"
+  bio              : "Mathematical biologist focusing on microbiology, systems biology and microbial ecology. PhD candidate in Biomathematics at UCLA."
   location         : "Los Angeles, California"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=mauricio+cruz-loya"
